--- a/neuroflag_hermione_rk3568/init.neuroflag_hermione_rk3568.rc
+++ b/neuroflag_hermione_rk3568/init.neuroflag_hermione_rk3568.rc
@@ -1,13 +1,14 @@
 on zygote-start
+    mkdir /data/rondata 0777 system system
     # For UART
     chmod 0666 /dev/ttyS9
 
 service rondriver /vendor/bin/ron-driver-server
     user system
-    group system
+    group system media_rw
     seclabel u:r:su:s0
     stdio_to_kmsg
-    setenv RON_DRIVER_DATA_DIR /data/data/com.neuroflag.hermione/rondata
+    setenv RON_DRIVER_DATA_DIR /data/rondata
 
 on property:rondriver.enabled=1 
     start rondriver
